<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="30">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="right"
            android:background="@color/marioRood"
            android:layout_weight="13">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/imageView5"
                    android:layout_margin="8dp"
                    android:background="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mario&amp;Co"
                    android:id="@+id/headerTextAanvraag"
                    android:textSize="50dp"
                    android:autoText="false"
                    android:textColor="#ffffffff"
                    android:textStyle="bold"
                    android:layout_margin="8dp"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:layout_margin="8dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Service"
                    android:id="@+id/serviceTextViewServiceAanvraag"
                    android:layout_margin="8dp"
                    android:layout_marginTop="16dp"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="ServiceInfo"
                    android:id="@+id/servicesInfoAanvraag"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_margin="8dp"
                    android:textSize="22dp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_margin="8dp"
                    android:textSize="22dp"
                    android:textStyle="italic"
                    android:text="@string/VoorIn" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Naam"
                        android:id="@+id/textView6"
                        android:layout_weight="8" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/naamEdit"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Adres"
                        android:id="@+id/textView7"
                        android:layout_weight="8" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/adresEdit"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Tel"
                        android:id="@+id/textView8"
                        android:layout_weight="8" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/telEdit"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Email"
                        android:id="@+id/textView9"
                        android:layout_weight="8" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/mailEdit"
                        android:layout_weight="2" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/marioRood"
            android:layout_weight="13"
            android:weightSum="10">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="&lt;"
                android:id="@+id/backButtonAanvraag"
                android:textSize="50dp"
                android:background="@color/marioRood"
                android:textColor="@color/marioWhite"
                android:onClick="prevPage"
                android:layout_weight="5" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="Aanvragen"
                android:id="@+id/aanvraagButton"
                android:textSize="25dp"
                android:background="@color/marioRood"
                android:textColor="@color/marioWhite"
                android:onClick="aanvraag"
                android:layout_weight="5" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
